tests/ui/type-alias/dyn-trait-type-alias-return-type.stderr
error[E0746]: return type cannot be a trait object without pointer indirection
  --> $DIR/dyn-trait-type-alias-return-type.rs:3:11
   |
LL | fn f() -> T { loop {} }
   |           ^ doesn't have a size known at compile-time
   |
help: consider returning an `impl Trait` instead of a `dyn Trait`
   |
LL | fn f() -> impl T { loop {} }
   |           ++++
help: alternatively, box the return type, and wrap all of the returned values in `Box::new`
   |
LL | fn f() -> Box<dyn T> { Box::new(loop {}) }
   |           +++++++  +   +++++++++       +

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0746`.
